Fixed the header items spacing

--- a/client/src/scss/components/_header.scss
+++ b/client/src/scss/components/_header.scss
@@ -123,7 +123,7 @@ header {
 	padding: 10px;
 	transform: rotate(90deg);
 	height: 20%;
-	width: 45px;
+	width: 41px;
 }
 
 .nav-btn-dropdown:hover {
@@ -135,6 +135,7 @@ header {
 	display: flex;
 	// justify-content: space-between;
 	width: 100%;
+	align-items: center;
 }
 
 .hide-menu {
